--- a/Granola.css
+++ b/Granola.css
@@ -14,7 +14,35 @@
   z-index: 999;
   overflow: hidden;
 }
+.infoDiv {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); /* Fondo borroso */
+  z-index: 1;
+}
 
+/* Estilo del botón de Atrás */
+#backButton {
+  background-color: #007BFF; /* Cambiar a tu color deseado */
+  color: white; /* Cambiar a tu color deseado */
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
+#login-form input {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  color: black; /* Color de texto negro */
+}
 /* Estilo para centrar el formulario */
 .center-form {
   position: absolute;
@@ -27,7 +55,26 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   color: white; /* Color de texto blanco */
   width: 350px; /* Ancho del formulario ajustado */
+ 
 }
+
+.infoContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #022B3A; /* Fondo de color #022B3A */
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  color: white; /* Color de texto blanco */
+  text-align: center;
+}
+#showInfoLink{
+  color: white;
+  cursor: pointer;
+};
+
+
 
 /* Estilo para el formulario */
 #login-form {
@@ -43,14 +90,7 @@
   color: white; /* Color de texto blanco */
 }
 
-#login-form input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  color: black; /* Color de texto negro */
-}
+
 
 /* Estilo para el botón Enviar */
 #login-form button {
@@ -60,6 +100,7 @@
   padding: 10px 20px;
   cursor: pointer;
 }
+
 
 
 .container{
@@ -95,7 +136,7 @@ a {
     text-align: center;
 }
 
-div.img {
+nav div.img {
     /* Mueve el div a la derecha */
     margin-left: auto;
     display: inline-block;
@@ -104,6 +145,7 @@ nav p {
   margin: 0; /* Elimina los márgenes */
   padding-left: 5px; /* Agrega un espacio a la izquierda del texto si lo deseas */
 }
+
 /* Estilo para el elemento .user-container */
 .user-container {
   display: flex;
@@ -114,6 +156,8 @@ nav p {
   margin: 0; /* Elimina los márgenes */
   padding-left: 5px; /* Agrega un espacio a la izquierda del texto si lo deseas */
 }
+
+
 
 div.playlist{
     background: #022B3A;
@@ -151,7 +195,7 @@ button.P{
 }
 
 .cançons{
-    width: 70%;
+    width: 60%;
     background-color: #022B3A;
     color: white;
     border: none;
@@ -203,6 +247,7 @@ p{
     grid-area: cntr;
     color: white;
     align-items: center;
+    display: block;
   }
   .musica{
     grid-area: musica;
@@ -215,33 +260,70 @@ p{
   .imgsong{
     grid-area: imgsong;
   }
+  .nomSong{
+    grid-area: nomSong;
+    color: white;
+  }
+  .music-visualizer{
+    grid-area: music-visualizer;
+  }
   div.barra{
     display: grid;
     grid-template-areas:
-    'cntr musica musica musica imgsong';
+    'music-visualizer nomSong nomSong nomSong imgsong'
+    'music-visualizer musica musica musica imgsong'
+    'music-visualizer cntr cntr cntr imgsong';
     gap: 10px;
     align-items: center;
-  }
-  .cntr{
-    display: block;
   }
 
   .cntr div{
     display: flex;
     gap: 20px;
     justify-content: center;
+    padding: 10px;
+    margin-bottom: 10px;
   }
-  #barraProgreso{
+ #barraProgreso {
     width: 80%;
+    height: 10px; /* Altura reducida para que sea más delgada */
+    margin: 0 auto; /* Centra horizontalmente en el formulario */
+    background-color: #007BFF; /* Color de fondo */
+    border: none;
+    border-radius: 3px; /* Bordes redondeados */
+    cursor: pointer;
+    outline: none; /* Elimina el borde predeterminado en el enfoque */
+}
+
+#barraProgreso::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Elimina el estilo predeterminado del control deslizante */
+    appearance: none;
+    width: 15px; /* Ancho del control deslizante */
+    height: 15px; /* Altura del control deslizante */
+    background-color: white; /* Color del control deslizante */
+    border: 1px solid #007BFF; /* Borde del control deslizante */
+    border-radius: 50%; /* Borde redondeado */
+    cursor: pointer;
+}
+
+#barraProgreso::-moz-range-thumb {
+    width: 15px; /* Ancho del control deslizante para Firefox */
+    height: 15px; /* Altura del control deslizante para Firefox */
+    background-color: white; /* Color del control deslizante para Firefox */
+    border: 1px solid #007BFF; /* Borde del control deslizante para Firefox */
+    border-radius: 50%; /* Borde redondeado para Firefox */
+    cursor: pointer;
+}
+
+  
+  .barra img{
+    width: 25px;
+    height: 25px;
   }
   img.portadasong{
     width:100px;
     height: 100px;
     padding: 10px;
-  }
-  div > img{
-    width: 25px;
-    height: 25px;
   }
 
   #barravolum{
@@ -272,6 +354,9 @@ p{
   button.cançons:hover{
     transform: scale(1.1); /* Aumenta el tamaño de la imagen al 110% al pasar el mouse */
   }
+  .submit:hover{
+    transform: scale(1.1); /* Aumenta el tamaño de la imagen al 110% al pasar el mouse */
+  }
   button.Pcançons:hover{
      /* Crea una sombra alrededor */
     box-shadow: 0 0 2px 1px rgba(255, 255, 255, 0.2);
@@ -285,32 +370,17 @@ p{
    }
    button.P:active{
      /* Crea una sombra alrededor */
-     transform: scale(1.1); }
+     transform: scale(1.1); 
+    }
   img {
     cursor: pointer; /* Cambia el cursor a una mano cuando se pasa el mouse sobre las imágenes */
     transition: transform 0.2s; /* Agrega una transición suave en la transformación (escala) */
   }
+
   
-  /* Estilo para las imágenes cuando se pasa el mouse sobre ellas */
-  img:hover {
-    transform: scale(1.1); /* Aumenta el tamaño de la imagen al 110% al pasar el mouse */
-  }
-  .showButtons:hover{
-    transform: scale(1.1); /* Aumenta el tamaño de la imagen al 110% al pasar el mouse */
-    /* Que cambie de color */
-    filter: invert(100%);
-  }
   .showButtons{
     cursor: pointer;
   }
-
-
-
-  /* Estilo para las canciones */
-.cançons {
-  /* Estilo para las canciones no seleccionadas */
-  font-size: 16px;
-}
 
 /* Estilo para la canción seleccionada */
 .cançons.selected {
@@ -319,3 +389,118 @@ p{
   transform: scale(1.1);
   background-color: rgb(73, 73, 73);
 }
+.selected-song {
+  transform: scale(1.1); /* Escala el botón al 110% de su tamaño original */
+  /* Agrega cualquier otro estilo que desees para destacar la canción seleccionada */
+  background-color: royalblue;
+}
+#imgbaixplist{
+  width: 15px;
+  height: 15px;
+}
+button.P{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.P p{
+  margin: 0;
+  margin: auto;
+  text-align: center;
+}
+
+.music-visualizer {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.bar {
+  width: 10px;
+  height: 5px;
+  background-color: #007BFF;
+  margin: 0 2px;
+}
+
+.bar-1 {
+  animation: soundWave 0.5s alternate infinite ease-in-out 0.2s;
+}
+
+.bar-2 {
+  animation: soundWave 0.5s alternate infinite ease-in-out 0.3s;
+}
+
+.bar-3 {
+  animation: soundWave 0.5s alternate infinite ease-in-out 0.4s;
+}
+
+.bar-4 {
+  animation: soundWave 0.5s alternate infinite ease-in-out 0.5s;
+}
+
+.bar-5 {
+  animation: soundWave 0.5s alternate infinite ease-in-out 0.6s;
+}
+
+@keyframes soundWave {
+  0% {
+    height: 5px;
+  }
+  100% {
+    height: 20px;
+  }
+}
+
+       /* Estilo para el contenedor del formulario */
+       #formularioAgregar {
+        display: none;
+        background-color: #022B3A;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        color: white;
+        width: 200px;
+        margin: 0 auto;
+    }
+
+    /* Estilo para el formulario */
+    #nuevaCancionForm {
+        text-align: center;
+    }
+
+    /* Estilo para las etiquetas del formulario */
+    #nuevaCancionForm label {
+        display: block;
+        margin-bottom: 5px;
+        color: white;
+    }
+
+    /* Estilo para los campos de entrada del formulario */
+    #nuevaCancionForm input[type="text"] {
+        width: 80%;
+        padding: 5px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        color: black;
+        font-size: 12px;
+        text-align: center; /* Centra el texto horizontalmente */
+    }
+
+    /* Estilo para el botón Añadir Canción */
+    #nuevaCancionForm input[type="submit"] {
+        background-color: #007BFF;
+        color: white;
+        border: none;
+        padding: 7px 10px;
+        cursor: pointer;
+        font-size: 12px;
+    }
+
+    /* Estilo para el botón Añadir Canción al pasar el mouse por encima */
+    #nuevaCancionForm input[type="submit"]:hover {
+        background-color: #0056b3;
+    }
+
